--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,10 @@ book:
     - pareto_basica.qmd
     - pareto_generalizada.qmd
     - references.qmd
+  page-footer:
+    center: 
+      - text: "Nelson Geraldo Aquino de Carvalho"
+        href: "https://onelsoncarvalho.github.io"
 
 bibliography: references.bib
 
